chore: update pom.xml dependencies and add version properties; enhance pagination test script