@@ -7,16 +7,34 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 public abstract class ScalingTest {
     protected static final String JSONIQ_LANGUAGE = "jsoniq";
     protected static final String XQUERY_LANGUAGE = "xquery31";
+    private static final List<String> JAVA_17_ADD_OPENS = List.of(
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+    );
 
     public abstract String getTestName();
 
     public abstract boolean getInitTesting();
+
+    private static List<String> javaCommandPrefix() {
+        List<String> command = new ArrayList<>();
+        command.add("java");
+        command.addAll(JAVA_17_ADD_OPENS);
+        command.add("-cp");
+        command.add(System.getProperty("java.class.path"));
+        return command;
+    }
 
     public void runTest(List<TestCase> testCases, String configName, String queryLanguage) {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyMMdd'T'HHmmss");
@@ -36,20 +54,17 @@ public abstract class ScalingTest {
                     queryIndex++;
                     System.out.println("Testing: " + query);
                     try {
-                        ProcessBuilder processBuilder = new ProcessBuilder(
-                                "java",
-                                "-cp",
-                                System.getProperty("java.class.path"),
-                                "helper.ExecutionTimer",
-                                test.getTestName(),
-                                configName,
-                                queryLanguage,
-                                query,
-                                String.valueOf(rep),
-                                String.valueOf(queryIndex),
-                                String.valueOf(estimatedInitTime),
-                                outputName
-                        );
+                        List<String> command = javaCommandPrefix();
+                        command.add("helper.ExecutionTimer");
+                        command.add(test.getTestName());
+                        command.add(configName);
+                        command.add(queryLanguage);
+                        command.add(query);
+                        command.add(String.valueOf(rep));
+                        command.add(String.valueOf(queryIndex));
+                        command.add(String.valueOf(estimatedInitTime));
+                        command.add(outputName);
+                        ProcessBuilder processBuilder = new ProcessBuilder(command);
                         processBuilder.inheritIO();
                         Process process = processBuilder.start();
                         try (
@@ -71,15 +86,12 @@ public abstract class ScalingTest {
 
     private long testInitTime(String query, String configName, String queryLanguage) {
         try {
-            ProcessBuilder processBuilder = new ProcessBuilder(
-                    "java",
-                    "-cp",
-                    System.getProperty("java.class.path"),
-                    "helper.InitTimeEstimator",
-                    query,
-                    configName,
-                    queryLanguage
-            );
+            List<String> command = javaCommandPrefix();
+            command.add("helper.InitTimeEstimator");
+            command.add(query);
+            command.add(configName);
+            command.add(queryLanguage);
+            ProcessBuilder processBuilder = new ProcessBuilder(command);
             processBuilder.redirectErrorStream(true);
             Process process = processBuilder.start();
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
